--- a/src/js/dashboard/tabs/progress/tab-progress.scss
+++ b/src/js/dashboard/tabs/progress/tab-progress.scss
@@ -31,11 +31,3 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 5px;
 }
-
-.table-container {
-    display: grid;
-
-    > div {
-        overflow-x: auto;
-    }
-}
